[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/characters/pickups/pickup.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/characters/pickups/filler_pickup.gd" type="Script" id=2]
[ext_resource path="res://resources/characters/pickups/filler_pickups_masks.tres" type="SpriteFrames" id=3]
[ext_resource path="res://resources/characters/megaship/megaship_palettes.tres" type="SpriteFrames" id=4]
[ext_resource path="res://resources/palette_swap_material.tres" type="Material" id=5]

[sub_resource type="CircleShape2D" id=3]
radius = 6.0

[sub_resource type="CircleShape2D" id=4]
radius = 3.0

[node name="FillerPickup" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )
life_time = 8.0
life_flicker_time = 6.0
flicker_before_timeout = true
dissapear_on_timeout = true
masks = ExtResource( 3 )
palettes = ExtResource( 4 )
move_speed = 15.0

[node name="Sprite" type="Sprite" parent="." index="4"]
material = ExtResource( 5 )

[node name="CollisionBox" type="CollisionShape2D" parent="." index="5"]
shape = SubResource( 3 )

[node name="SmallCollisionBox" type="CollisionShape2D" parent="." index="6"]
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="7"]
visible = false
frames = ExtResource( 3 )
playing = true
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_animated_sprite_frame_changed"]
